# hasp-tracker

./: +  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md  adaboost_train  adaboost_train.cpp  hasp-tracker.kdev4  hasp_tracker  journal.txt  main.cpp  memo.txt  tags
TrainsetCreator/: README.md  build.properties  build.xml
TrainsetCreator/src/it/univpm/dii/: TrainsetCreator.java
TrainsetCreator/src/it/univpm/dii/utils/: MenuItems.java  (+8 more)
c++/: CMakeLists.txt
c++/src/: main.cpp
c++/src/headers/: image.h
c++/src/modules/: Image.cpp  Image.h
cmake/: FindMATLAB.cmake  FindMatlabCustom.cmake
doc/relazione/: index.tex  packages.sty
doc/tesi/: bibliografia.bib  frontespizio.sty  index.bcf  index.run.xml  index.tex  packages.sty
doc/tesi/appendices/: kinect.tex  software.tex
doc/tesi/chapters/: cap_1.tex  cap_2.tex  cap_3.tex  cap_4.tex  cap_5.tex  cap_6.tex
doc/tesi/code/: best_weak_classifier.cxx
doc/tesi/section/: adaboost.tex  mindmap.tex  overview.tex
documents/relazione/: index.aux  index.fdb_latexmk  index.fls  index.out  index.tex  packages.sty
documents/tesi/: bibliografia.bib  frontespizio.sty  index.aux  index.fdb_latexmk  index.fls  index.out  index.tex  index.toc  packages.sty
documents/tesi/chapters/: cap_1.tex  cap_2.tex  cap_3.tex  cap_4.tex
documents/tesi/section/: adaboost.tex  introduzione.tex  overview.tex  top_down_evolution.tex  weak_learner.tex
documents/tesi/tmp/: index.fdb_latexmk
framesviewer/: index.html  main.js  package.json
matlab/: CMakeLists.txt  README.md  initEnvironment.m  placeholder.cpp  tags
matlab/adaboost/: CMakeLists.txt  adaboostTesting.m  adaboostTraining.m  best_threshold.cxx  best_weak_classifier.cxx  calculate_features.cxx  calculate_final_classifier.m  calculate_strong_classifier.m  calculate_weak_classifier.m  createStrongClassifier.m  evaluateThresholds.m  evaluate_thresholds.cxx  evaluate_thresholds.m  getBestTuning.m  get_classifier_function.m  get_features.cc  get_features.cxx  scale_classifier.m  scale_final_classifier.m  strongClassify.m  strong_classify.cxx  tuneStrongClassifier.m  weak_classify_samples.cxx
matlab/analysis/: calculateEvaluationParams.m  evaluateThresholds.m  plotThresholdEval.m  plotWeightedError.m
matlab/detection/: CMakeLists.txt  create_layers.m  detectHuman.m  detect_human.cxx  detect_positive_windows.m  filter_rectangles.m  generate_positions.m  test_classifier.m
matlab/detector/: HaspDetector.m
matlab/gfx/: destroyrectangles.m  drawrectangles.m
matlab/haar/: CMakeLists.txt  get_feature_handler.m  haarHorizontalLinear.m  haarVerticalEdge.m  haarVerticalLinear.m  haar_horizontal_edge.cc  haar_horizontal_edge.cxx  haar_horizontal_linear.cc  haar_horizontal_linear.cxx  haar_vertical_edge.cc  haar_vertical_edge.cxx  haar_vertical_linear.cc  haar_vertical_linear.cxx  setupFeatures.m
matlab/haar/mex/: mex_haar_horizontal_edge.cc
matlab/hasp/: generateWindow.m  localMinima.m  strongClassifier.m  weakClassifiers.m
matlab/hasp/mex/: haar_like.cc
matlab/hasp/views/: picker.fig  picker.m  trainer.fig  trainer.m
matlab/include/: haar-like.cc
matlab/io/: checkpath.m  decodeFinalClassifier.m  decodeStrongClassifier.m  decodeThresholdEval.m  decodeTuning.m  decodeWeakClassifier.m  encodeThresholdEval.m  encodeTuning.m  encodeWeakClassifier.m  getDatasetPath.m  getFrames.m  getFramesPath.m  getTrainingFrames.m  readFramesAndLabels.m  readImageData.m
matlab/lib/: Adaboost.cpp  Adaboost.h  CMakeLists.txt  Dimensions.cpp  Dimensions.h  Haar.cpp  Haar.h  Image.cpp  Image.h  Interval.cpp  Interval.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Sample.cpp  Sample.h  WeakClassifier.cpp  WeakClassifier.h  to_string_patch.h
matlab/lib/exception/: MemoryAccessException.h  SplitException.h
matlab/lib/include/: adaboost.h  exceptions.h  feature.h  geometry.h  image.h  mexutils.h
matlab/lib/mapping/: CMakeLists.txt  matlab.cpp  matlab.h
matlab/lib/src/adaboost/: Adaboost.cpp  Adaboost.h  FeatureTest.cpp  FeatureTest.h  Sample.h  StrongClassifier.cpp  StrongClassifier.h  WeakClassifier.cpp  WeakClassifier.h
matlab/lib/src/feature/: Haar.cpp  Haar.h
matlab/lib/src/geometry/: Dimensions.cpp  Dimensions.h  Interval.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
matlab/lib/src/image/: Image.cpp  Image.h
matlab/lib/src/mexutils/: io.cpp  io.h  structure_mapping.h  templates_definition.h  utils.cpp  utils.h
matlab/old/: OldAdaboostTrainer.m  arrangeFeatures.m  haarHorizontalEdge.m  haarHorizontalLinear.m  haarVerticalEdge.m  testStrongClassifier.m
matlab/old/hasp/: OLDdetectHuman.m  generateWindow.m  weakClassifiers.m
matlab/old/include/: general.h  haar-like.h
matlab/preprocess/: CMakeLists.txt  CalibrationParam.mat  ClosingScript.m  array_fire_info.cxx  depthFrame.mat  floor_rebase.cc  floor_rebase.cxx  integral_image.cxx  mex_haar_features.cc  preprocessImage.m  scale_image.cxx
matlab/procedures/: README.md  detectHumanInFrames.m  evalBestThreshold.m  evaluateClassifierThresholds.m  reverseSamplesCrop.m  showIntegralVideoFromFrames.m  showVerticalHaarVideo.m  showVideoAndDetect.m  showVideoFromFrames.m  strongClassifierTuning.m  testAdaboost.m  testStrongClassifier.m  trackHuman.m  trainWithAdaboost.m  workflow.txt
matlab/test/: test_search_blob_pattern.m
matlab/trainer/view/: cropper.fig  cropper.m
matlab/utilities/: checkisdir.m  checksubdirs.m  choosesubdir.m  countFeatures.m  cutImage.m  generateFilterMatrix.m  getDatasetPath.m  getDsFramePath.m  getFramesPath.m  getMinimum.m  get_record_path.m  inputdef.m  integralImage.m  loadDepthFrame.m  plotFrames.m  plotWithMesh.m  readImageData.m  saveImage.m  save_reversed_sample.m  search_blob_pattern.m
matlab/utilities/mex/: mex_haar_features.cc  mex_integral_image.cc
matlab/utilities/mex/prove/: mex_haar_edges.cc  vertical_haar_edge.cc
notes/: computer-vision.html  hasp-tracker.html  machine-learning.html  style.css
scripts/: dataset_downloader.py  feature-count  feature-count.c  features-counter.py
scripts/FindPersonScript/: IsPerson.m  PreprocessingFrame.m  StartScript.m
(+61 files in other folders)
